force-app/main/default/objects/Season__c/Season__c.object-meta.xml
<CustomObject>
    <description>Calendar season across all competitions (e.g., 2024-2025, 2024)</description>
    <label>Season</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Season Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>