force-app/main/default/objects/Season__c/fields/Season_Name__c.field-meta.xml
<CustomField>
    <fullName>Season_Name__c</fullName>
    <description>Season display name (e.g., 2024-2025, 2024)</description>
    <inlineHelpText>Enter season name like "2024-2025" for split year or "2024" for calendar year</inlineHelpText>
    <label>Season Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>