force-app/main/default/objects/Season__c/fields/Season_Type__c.field-meta.xml
<CustomField>
    <fullName>Season_Type__c</fullName>
    <description>Type of season calendar</description>
    <label>Season Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar Year</fullName>
            </value>
            <value>
                <fullName>Split Year</fullName>
                <default>true</default>
                <label>Split Year</label>
            </value>
            <value>
                <fullName>Tournament</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>