force-app/main/default/objects/Season__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <description>Sport type for filtering</description>
    <label>Sport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>